<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/loginEkranLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/macaronbackground"
        android:fitsSystemWindows="true"
        android:onClick="loginEkranClicks"
        tools:layout_editor_absoluteY="81dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/TextAppearance.AppCompat"
            app:layout_constraintBottom_toTopOf="@+id/text_input_layout_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:fontFamily="@font/kim"
                android:hint="eposta or telefon"
                android:inputType="textEmailAddress"
                android:padding="7dp"
                android:selectAllOnFocus="false"
                android:singleLine="false"
                android:textColor="#2e2e2e"
                android:textColorHint="@android:color/darker_gray" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="17dp"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordEditText"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:fontFamily="@font/kim"
                android:hint="sifre"
                android:inputType="textPassword"
                android:padding="7dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginBottom="8dp"
            android:background="#58453F"
            android:fontFamily="@font/kim"
            android:onClick="loginEkranClicks"
            android:text="GIRIS YAP"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/signUpButton"
            app:layout_constraintEnd_toEndOf="@+id/text_input_layout_password"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/text_input_layout_password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/kim"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/text_input_layout_password"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/text_input_layout_password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.88" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/forgot_password"
            android:textColor="#69a2ff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpButton"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/uyariTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:text="@string/invalid_login"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/text_input_layout_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>